add remove user from project, archived project
(cherry picked from commit 106e322b72be61d5dc477ba35647f9a7f38de342)